[gd_scene load_steps=9 format=4 uid="uid://dash3q2g541do"]

[ext_resource type="Script" uid="uid://cyq13pco3ovt" path="res://characters/0_frames/human_frame.gd" id="2_6vsex"]
[ext_resource type="FontFile" uid="uid://t4dji8hg75hf" path="res://fonts/ebrima.ttf" id="2_ad6by"]
[ext_resource type="PackedScene" uid="uid://mj4qdlfjjcmc" path="res://characters/1_bodies/human_body.tscn" id="3_x5jif"]

[sub_resource type="OggPacketSequence" id="OggPacketSequence_33n52"]
packet_data = Array[Array]([[PackedByteArray("AXZvcmJpcwAAAAACRKwAAAAAAAAAcQIAAAAAALgB")], [PackedByteArray("A3ZvcmJpcysAAABYaXBoLk9yZyBsaWJWb3JiaXMgSSAyMDEyMDIwMyAoT21uaXByZXNlbnQpAAAAAAE="), PackedByteArray("BXZvcmJpcylCQ1YBAAgAAAAxTCDFgNCQVQAAEAAAYCQpDpNmSSmllKEoeZiUSEkppZTFMImYlInFGGOMMcYYY4wxxhhjjCA0ZBUAAAQAgCgJjqPmSWrOOWcYJ45yoDlpTjinIAeKUeA5CcL1JmNuprSma27OKSUIDVkFAAACAEBIIYUUUkghhRRiiCGGGGKIIYcccsghp5xyCiqooIIKMsggg0wy6aSTTjrpqKOOOuootNBCCy200kpMMdVWY669Bl18c84555xzzjnnnHPOCUJDVgEAIAAABEIGGWQQQgghhRRSiCmmmHIKMsiA0JBVAAAgAIAAAAAAR5EUSbEUy7EczdEkT/IsURM10TNFU1RNVVVVVXVdV3Zl13Z113Z9WZiFW7h9WbiFW9iFXfeFYRiGYRiGYRiGYfh93/d93/d9IDRkFQAgAQCgIzmW4ymiIhqi4jmiA4SGrAIAZAAABAAgCZIiKZKjSaZmaq5pm7Zoq7Zty7Isy7IMhIasAgAAAQAEAAAAAACgaZqmaZqmaZqmaZqmaZqmaZqmaZpmWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWUBoyCoAQAIAQMdxHMdxJEVSJMdyLAcIDVkFAMgAAAgAQFIsxXI0R3M0x3M8x3M8R3REyZRMzfRMDwgNWQUAAAIACAAAAAAAQDEcxXEcydEkT1It03I1V3M913NN13VdV1VVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVWB0JBVAAAEAAAhnWaWaoAIM5BhIDRkFQCAAAAAGKEIQwwIDVkFAAAEAACIoeQgmtCa8805DprloKkUm9PBiVSbJ7mpmJtzzjnnnGzOGeOcc84pypnFoJnQmnPOSQyapaCZ0JpzznkSmwetqdKac84Z55wOxhlhnHPOadKaB6nZWJtzzlnQmuaouRSbc86JlJsntblUm3POOeecc84555xzzqlenM7BOeGcc86J2ptruQldnHPO+WSc7s0J4ZxzzjnnnHPOOeecc84JQkNWAQBAAAAEYdgYxp2CIH2OBmIUIaYhkx50jw6ToDHIKaQejY5GSqmDUFIZJ6V0gtCQVQAAIAAAhBBSSCGFFFJIIYUUUkghhhhiiCGnnHIKKqikkooqyiizzDLLLLPMMsusw84667DDEEMMMbTSSiw11VZjjbXmnnOuOUhrpbXWWiullFJKKaUgNGQVAAACAEAgZJBBBhmFFFJIIYaYcsopp6CCCggNWQUAAAIACAAAAPAkzxEd0REd0REd0REd0REdz/EcURIlURIl0TItUzM9VVRVV3ZtWZd127eFXdh139d939eNXxeGZVmWZVmWZVmWZVmWZVmWZQlCQ1YBACAAAABCCCGEFFJIIYWUYowxx5yDTkIJgdCQVQAAIACAAAAAAEdxFMeRHMmRJEuyJE3SLM3yNE/zNNETRVE0TVMVXdEVddMWZVM2XdM1ZdNVZdV2Zdm2ZVu3fVm2fd/3fd/3fd/3fd/3fd/XdSA0ZBUAIAEAoCM5kiIpkiI5juNIkgSEhqwCAGQAAAQAoCiO4jiOI0mSJFmSJnmWZ4maqZme6amiCoSGrAIAAAEABAAAAAAAoGiKp5iKp4iK54iOKImWaYmaqrmibMqu67qu67qu67qu67qu67qu67qu67qu67qu67qu67qu67qu67pAaMgqAEACAEBHciRHciRFUiRFciQHCA1ZBQDIAAAIAMAxHENSJMeyLE3zNE/zNNETPdEzPVV0RRcIDVkFAAACAAgAAAAAAMCQDEuxHM3RJFFSLdVSNdVSLVVUPVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVdU0TdM0gdCQlQAAGQAA5KSm1HoOEmKQOYlBaAhJxBzFXDrpnKNcjIeQI0ZJ7SFTzBAEtZjQSYUU1OJaah1zVIuNrWRIQS22xlIh5agHQkNWCAChGQAOxwEcTQMcSwMAAAAAAAAASdMATRQBzRMBAAAAAAAAwNE0QBM9QBNFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAcTQM0UQQ0UQQAAAAAAAAATRQB0VQB0TQBAAAAAAAAQBNFwDNFQDRVAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAcTQM0UQQ0UQQAAAAAAAAATRQBUTUBTzQBAAAAAAAAQBNFQDRNQFRNAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAQ4AAAEWQqEhKwKAOAEAh+NAkiBJ8DSAY1nwPHgaTBPgWBY8D5oH0wQAAAAAAAAAAABA8jR4HjwPpgmQNA+eB8+DaQIAAAAAAAAAAAAgeR48D54H0wRIngfPg+fBNAEAAAAAAAAAAADwTBOmCdGEagI804RpwjRhqgAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAACAAQcAgAATykChISsCgDgBAIejSBIAADiSZFkAAKBIkmUBAIBlWZ4HAACSZXkeAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIAAAIABBwCAABPKQKEhKwGAKAAAh6JYFnAcywKOY1lAkiwLYFkATQN4GkAUAYAAAIACBwCAABs0JRYHKDRkJQAQBQDgcBTL0jRR5DiWpWmiyHEsS9NEkWVpmqaJIjRL00QRnud5pgnP8zzThCiKomkCUTRNAQAABQ4AAAE2aEosDlBoyEoAICQAwOE4luV5oiiKpmmaqspxLMvzRFEUTVNVXZfjWJbniaIomqaqui7L0jTPE0VRNE1VdV1omueJoiiapqq6LjRNFE3TNFVVVV0XmuaJpmmaqqqqrgvPE0XTNE1VdV3XBaJomqapqq7rukAUTdM0VdV1XReIomiapqq6rusC0zRNVVVd15VlgGmqqqq6riwDVFVVXdeVZRmgqqrquq4rywDXdV3ZlWVZBuC6rivLsiwAAODAAQAgwAg6yaiyCBtNuPAAFBqyIgCIAgAAjGFKMaUMYxJCCqFhTEJIIWRSUioppQpCKiWVUkFIpaRSMkotpZZSBSGVkkqpIKRSUikFAIAdOACAHVgIhYasBADyAAAIY5RizDnnJEJKMeaccxIhpRhzzjmpFGPOOeeclJIx55xzTkrJmHPOOSelZMw555yTUjrnnHMOSimldM4556SUUkLonHNSSimdc845AQBABQ4AAAE2imxOMBJUaMhKACAVAMDgOJalaZ4niqZpSZKmeZ4nmqZpapKkaZ4niqZpmjzP80RRFE1TVXme54miKJqmqnJdURRN0zRNVSXLoiiKpqmqqgrTNE3TVFVVhWmapmmqquvCtlVVVV3XdWHbqqqqruu6wHVd13VlGbiu67quLAsAAE9wAAAqsGF1hJOiscBCQ1YCABkAAIQxCCmEEFIGIaQQQkgphZAAAIABBwCAABPKQKEhKwGAcAAAgBCMMcYYY4wxNoxhjDHGGGOMMXEKY4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHG2FprrbVWABjOhQNAWYSNM6wknRWOBhcashIACAkAAIxBiDHoJJSSSkoVQow5KCWVllqKrUKIMQilpNRabDEWzzkHoaSUWooptuI556Sk1FqMMcZaXAshpZRaiy22GJtsIaSUUmsxxlpjM0q1lFqLMcYYayxKuZRSa7HFGGuNRSibW2sxxlprrTUp5XNLsdVaY6y1JqOMkjHGWmustdYilFIyxhRTrLXWmoQwxvcYY6wx51qTEsL4HlMtsdVaa1JKKSNkjanGWnNOSglljI0t1ZRzzgUAQD04AEAlGEEnGVUWYaMJFx6AQkNWAgC5AQAIQkoxxphzzjnnnHMOUqQYc8w55yCEEEIIIaQIMcaYc85BCCGEEEJIGWPMOecghBBCCKGEklLKmHPOQQghhFJKKSWl1DnnIIQQQiillFJKSqlzzkEIIYRSSimllJRSCCGEEEIIpZRSSikppZRCCCGEEkoppZRSUkophRBCCKWUUkoppaSUUgohhBBKKaWUUkpJKaUUQgmllFJKKaWUklJKKaUQSimllFJKKSWllFJKpZRSSimllFJKSimllEoppZRSSimllJRSSimVUkoppZRSSikppZRSSqmUUkoppZRSUkoppZRSKaWUUkoppaSUUkoppVJKKaWUUkpJKaWUUkqllFJKKaWUklJKKaWUUiqllFJKKaUAAKADBwCAACMqLcROM648AkcUMkxAhYasBADIAAAQB7G01lqrjHLKSUmtQ0Ya5qCk2EkHIbVYS2UgQcpJSp2CCCkGqYWMKqWYk5ZCy5hSDGIrMXSMMUc55VRCxxgAAACCAAADETITCBRAgYEMADhASJACAAoLDB3DRUBALiGjwKBwTDgnnTYAAEGIzBCJiMUgMaEaKCqmA4DFBYZ8AMjQ2Ei7uIAuA1zQxV0HQghCEIJYHEABCTg44YYn3vCEG5ygU1TqQAAAAAAAHgDgAQAg2QAiIqKZ4+jw+AAJERkhKTE5QREAAAAAADsA+AAASFKAiIho5jg6PD5AQkRGSEpMTlACAAABBAAAAABAAAEICAgAAAAAAAQAAAAICA==")], [PackedByteArray("lAXJRWdQ9y9RKQtqX8DxmIQUeQCsKwpFoBHA3OUp6jlkZIE22uFk17x3X3Nru4VjEkSj5Ih8V/zPo9x1fw/8XeugUv5VipUB"), PackedByteArray("5AXbjcETGxdfyxO2PYMn1l6uvUVNpQgkKmwK1BjUiFFb1SqjWotGr4hGSek921pVtYQivRfNT/BTpUiVWR2jSLqW0UlccLGgJl6P9HwuM6Z9RAA="), PackedByteArray("5An5B+iBdjHkhuYJ+QfogfYxNEZPtxo1GZhAKGuBVTGiig5VQStWVMWKVqMqYrHRqIX/Fq61qJy6z69fft/Prluz7y9r90/9zUbBie4N5iv/aJHMXxBMAA=="), PackedByteArray("WkbMcf9FGqT0LM0z6uznUEbMcf9GSqT0LNMz6uz79AcAAADYUomJOTjUyaRUtdVgVWkhCQCgFIDaBojSKAUAERSUEhYSp8IMjyPEUsoRkpKUJiXEZyjlMowQg3WxsGLNiqgqYFhodGgUAVC1qlZVQWxQsY1F0RTSojaKNSPhM+OLOW+ElOA85uHfu7/v21mklAQTQjpxpFTn3wAKEB4hOzRI2HYZy2ARWBDK7XWfktZ6A4giGmNBQYMAAEbFsnVr+z/Q/XAAvGOgOWa9Na6IBwbEnG+neuurPsDG+L0p8o6d4vHh6wN2uymR5P/u7B7ymV6eGjAMFHwbauolS+qEb9IkM1UBwVkKftdvXX/1HM4cVwlFAwAXEX+EEuXS9ulSxFEyCdFygiQF+VuRxgHFZWbQspqsMOim76aU5SWMAPEWyGCwMYCtaxKKKCkLYqLZ/CWItKgA"), PackedByteArray("Xmjk8f9JZIRV92v4Sq8xHQqNPP4/iYyw6n5NX+k1psOnmiAq9dQNkPVWi0Sq1ha8QU2dMhIUgcAFNonrYhOmuByJOalaaMNlSWuEAgDEqipiDUatoNYgGLEIxiooGCzGGkQMggKCYWtv6xFArPaiAoqdIoCiYiMioqiqgKqlzSYCinXrCtaDMawpCACmIqiAqmndBFC1BTCIikaMTkRAAMCKBo6itySxZkVBRFAFJImFFoUAxjotYOCE/A7zRDttTAqHoQBZ+gdtRrIJKwCMbJsxEMqWigaAtS2Xbrgtc8fFKN7csgWTlGCiqSRnGl6yNpXoa2HZ2hTYOmf2oJx/1sXXLGNNAZ+cM9B0FvyMgC5I1aHzpqgjqnYF3VqxDJMZTZL0dNtWho3g4nTaEiwUm1ZPzIgtAWEMSIgXb+i2KkpTMkC8YCQQoFFiaW8BaYOk5fVhU4SuhgBpCXhhAgA="), PackedByteArray("XlhU5P8kLgS90B2n/KYJoNCoyP+TuBT0Uj+dUmt08QcAAAD4gHpqEsiyBlBWgNtgBxKbX0hM7sXXe0IaNVWVFlYmAUAA2QhAkUCWQBSDsRZBQQwCCMaIEQDU1hQANSyGVUBQMW0VFNRip6Bi9NmbQlAxI1FJQgAIiAmL8wCAxwoRKQpQCIkJSBLoNADWWAUAUUsAwLBuggWgCFgTAKWiKAJgRdWhEUBUrJsAoGIJgBTFYViAsCadAAUiQGAWSlhJAAEGjGkx1ooMtmQEWOPAklgsYxAAVXWBEYwCBsCBMSUHlqq1ghVAGmPLY41LjNt0ln08Y43JGkByQXUxNMY/jN/77iRNUZmnZ91cBiBJp6Gh818/baidncmHoQtm/9ryV+Pwv/1oHpfl3ibrqvUbEp+v6a7dQOSS1A7klEnTiadrWYsjqAAGfAuDuY8gbcASsKRDpLH3nRpO4BYgCwkaAQbzFhgfsSIEAEwIwMV4AQ=="), PackedByteArray("PlhU5P9JGwlV7qfvqkb3ebCoyP+dNiKq3E3fVY3u03NNFaitrUkAAPgGAAgsNrEUBwdih1RVUw2toNKqqiQJQFUVUNSIiEANQEhAAZBqK6gqWGxMQFmGL0wIZSk4PBEBDqWgVBgs4TCEEC6VUgzrhgKopU1WDQXRiE4RAEAph1yl6WeM9iKARqcOgy2qMhuSMlrULtHf1Za7ukqE07stTVDhndYJVT6h0qWGBYKMKjWojYhWFLEoWDKKTIBsTOAQizEyGMKWgRoAcMnf+fJTdt0H96+xD4o+HKh9s4svxtVj6+34cz/twV6d3s5LzqwEjGXPhyRhuAaAf3dGaTfv9DLgQw5ubtOt+08AX4dDUoPAMxL4QQY2m4D8RgOh8HglJM+/5uAgQwwaBNlMJIXujgUoNZiEKHinBxsX0SoKznYjIU2kXwBQ56CCEIUDAA=="), PackedByteArray("3liU4p/FnhGanJvv9mpKaCRK8c9izyCmnIfv7dWYTHcbG9igzebrIF6kqaapWbUqCVGuhgQAWGyxlJrTtDHszWCIrUXFzrS1FRvDYq+YFksMw0YrglXDwrpYMS11YOtVFEppI9oIqLbMKrkxYtHqUAFxY8tpAEqsKcXtFoODMDAWi066q180mWRCH5rjXQqDtAlcYBlWDWEvQtUsiioG14uA19ROWsqIXtKCxYpWBGOgCmDRWLFiVUDMSkIsVioKwCCJlgyNskossQICYMo99u/H1Iw9n9O4ewr8vPAfzqwqNPScusDsyf/XFNVzj3jnLEXO9MlkWDvpdJFw/j/F7HbnZB2yJKZ2FfDH1X8zx2yZzawrhskfmE3xML1JKA4XXL2/wn1oshkv5Ikoj+YHK8F0kmChwN4DAOBGGsDj0E7OqsRYwUCtOw60YRsag+7UOMgNFNMkipEJ"), PackedByteArray("HmZs/jPLKnohH+uQY8w4+4/i2wq7qm3qyxS9wAG9aLMP67ToKAgREiSkAAAAAICDCevgxuJgmLgwU1dn9MYWtrQpHZVlJtvpMHqsjMvtLVmtW3Rv9loxUyu3vnkrDn/vw4jt5ZA9Uq75UJ4q937Ivi+TyuNrK5W1933dqfh63sY9m/ll1vNf4Tf3VeR5W+uTsaauynb2exJHZ108y9vQ04OstJABrhf02lq0elsxPTQZwJRdpUSTlrPXwCNTWSOnVuGmMp1YrkhbmsgwsnAQSmHgimJRoqdx4FLUllJ6kV5dUTULUSygB62dq7BMWzUyWlursAYZCgAALLjjn8MDAAAWA54Prp4Dhl0G")]])
granule_positions = PackedInt64Array(0, 0, 5256)
sampling_rate = 44100.0

[sub_resource type="AudioStreamOggVorbis" id="AudioStreamOggVorbis_s5y3l"]
packet_sequence = SubResource("OggPacketSequence_33n52")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_jdr33"]
playback_mode = 1
random_pitch = 1.5
random_volume_offset_db = 2.0
streams_count = 1
stream_0/stream = SubResource("AudioStreamOggVorbis_s5y3l")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_avcik"]
radius = 0.75
height = 2.25

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_o1gmq"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:examine_text")
properties/2/spawn = true
properties/2/replication_mode = 2

[node name="HumanFrame" type="CharacterBody3D" groups=["examine_target", "interact_target", "sever_target"]]
collision_layer = 10
script = ExtResource("2_6vsex")

[node name="SpeechLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.30936, 0)
billboard = 1
font = ExtResource("2_ad6by")

[node name="SpeechClearTimer" type="Timer" parent="."]
one_shot = true

[node name="SpeechAudioLoopTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="SpeechAudioLoopEndTimer" type="Timer" parent="."]
one_shot = true

[node name="SpeechAudioStream" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.79516, 0)
stream = SubResource("AudioStreamRandomizer_jdr33")
unit_size = 7.0
bus = &"CharacterSpeech"
doppler_tracking = 2

[node name="HumanBody" parent="." groups=["examine_target", "interact_target", "sever_target"] instance=ExtResource("3_x5jif")]

[node name="WorldCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15, 0)
shape = SubResource("CapsuleShape3D_avcik")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_o1gmq")

[connection signal="timeout" from="SpeechClearTimer" to="." method="_on_speech_clear_timer_timeout"]
[connection signal="timeout" from="SpeechAudioLoopTimer" to="." method="_on_speech_audio_loop_timer_timeout"]
[connection signal="timeout" from="SpeechAudioLoopEndTimer" to="." method="_on_speech_audio_loop_end_timer_timeout"]
